--- a/18.10 huiswerkopgaven.html
+++ b/18.10 huiswerkopgaven.html
@@ -37,7 +37,7 @@
             background-color: white;
         }
         .row{
-            min-height: 100vh;
+            min-height: 100vh;  
         }
         header{
             display: flex;
@@ -47,8 +47,10 @@
             background-size: cover;
             background-position: center;
             height: 250px;
+        }
+        h1{
             font-family: 'Great Vibes', cursive;
-            font-size: 80px;
+            font-size: 12vw;
             color:whitesmoke;
             text-align: center;
         }
