--- a/18.10 huiswerkopgaven.html
+++ b/18.10 huiswerkopgaven.html
@@ -46,7 +46,7 @@
             background-image: url(Kessel.jpg);
             background-size: cover;
             background-position: center;
-            height: 250px;
+            height: 25vw;
         }
         h1{
             font-family: 'Great Vibes', cursive;
